@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -63,7 +62,7 @@ public class InventoryService {
 
         List<Long> missingProducts = productIds.stream()
                 .filter(id -> !productMap.containsKey(id))
-                .collect(Collectors.toList());
+                .toList();
         if (!missingProducts.isEmpty()) {
             throw new RuntimeException("Products not found: " + missingProducts);
         }
